[package]
name = "cask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
